# JARVIS

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-voice.txt  requirements.txt
assistant/: __init__.py  __main__.py  app.py  commands.py  config.py  llm.py  logging_setup.py  scheduler.py  storage.py
assistant/speech/: __init__.py  stt.py  tts.py
scripts/: run.ps1  setup.ps1  setup.sh
tests/: conftest.py  test_commands.py  test_scheduler.py  test_storage.py
