[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "group-project-assistant-ai"
version = "1.0.0"
description = "Cross-platform voice/text AI assistant for managing group projects"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "anthropic>=0.40",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
voice = [
    "SpeechRecognition>=3.10",
    "pyttsx3>=2.90",
    "PyAudio>=0.2.13",
]
dev = [
    "pytest>=8.0",
]

[project.scripts]
gpa = "assistant.__main__:main"

[tool.setuptools.packages.find]
include = ["assistant*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
